# downloader2024

./: README.md  pyproject.toml
.github/workflows/: amex1.yml  nasdaq1.yml  nasdaq2.yml  nasdaq3.yml  nasdaq4.yml  nasdaq5.yml  nyse1.yml  nyse2.yml  nyse3.yml  tsx.yml  tsx1.yml  tsx2.yml  tsxv1.yml  tsxv2.yml  tsxv3.yml  tsxv4.yml
DATA/: amex1-2024-01-04.csv  amex1-2024-01-05.csv  amex1-2024-01-06.csv  amex1-2024-01-07.csv  amex1-2024-01-08.csv  amex1-2024-01-09.csv  amex1-2024-01-10.csv  amex1-2024-01-11.csv  amex1-2024-01-12.csv  amex1-2024-01-13.csv  amex1-2024-01-14.csv  amex1-2024-01-15.csv  amex1-2024-01-16.csv  amex1-2024-01-17.csv  amex1-2024-01-18.csv  amex1-2024-01-19.csv  amex1-2024-01-21.csv  amex1-2024-01-22.csv  amex1-2024-01-23.csv  amex1-2024-01-31.csv  amex1-2024-02-02.csv  amex1-2024-02-03.csv  amex1-2024-02-04.csv  amex1-2024-02-05.csv  amex1-2024-02-06.csv  amex1-2024-02-07.csv  amex1-2024-02-08.csv  amex1-2024-02-09.csv  amex1-2024-02-10.csv  amex1-2024-02-11.csv  amex1-2024-02-12.csv  amex1-2024-02-13.csv  amex1-2024-02-14.csv  amex1-2024-02-15.csv  amex1-2024-02-16.csv  amex1-2024-02-17.csv  amex1-2024-02-18.csv  amex1-2024-02-19.csv  amex1-2024-02-20.csv  amex1-2024-02-21.csv  (+4906 more)
src/: __init__.py  download.py  downloader.py  github.py
